test/shouldnt-compile/wrong-enum.cpp
#include "common.hpp"


void check() {
  Enums e = OtherEnum::One;
}
